feat(native): Setup development build and install task-manager,notification,expo device . library

--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ayush01010101.WaterRemainder"
     },
     "web": {
       "bundler": "metro",
@@ -36,6 +37,13 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "2e4f4d1b-2f17-42b4-9263-ee80a6c6242c"
+      }
+    },
+    "owner": "ayush01010101"
   }
 }
