--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^54.0.0",
+    "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.16",
     "expo-device": "~8.0.9",
     "expo-linking": "~8.0.8",
